# Advent-of-Code-2017

./: .gitignore  Day1.kt  Day10.kt  Day11.kt  Day12.kt  Day15.kt  Day17.kt  Day2.kt  Day20.kt  Day21.kt  Day22.kt  Day23.kt  Day6.kt  Day7.kt  Day8.kt  README.md  advent-code.cabal  build.gradle  run-code.sh  settings.gradle  stack.yaml
benchmarks/: criterion-report-2.html  criterion-report-3.html  criterion-report.html
haskell/: README.md  advent-code.cabal
haskell/src/: Main.hs  Sponsers.hs  Y2016D01.hs
haskell/src/Y2017/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  DayTemplate.hs  input07  input19
haskell/src/y2016/: Day01.hs  day01.hs
haskell/src/y2017/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  DayTemplate.hs
kotlin/: build.gradle
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/kotlin/y2015/: Day1.kt  Day2.kt  Day4.kt  Day5.kt  Day6.kt
kotlin/src/main/kotlin/y2016/: Day1.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day19.kt  Day2.kt  Day20.kt  Day21.kt  Day22.kt  Day23.kt  Day24.kt  Day25.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt
src/: Main.hs
src/Y2016/: Day01.hs
src/Y2017/: Day01.hs  Day02.hs  Day05.hs  Day06.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day21.hs  Day22.hs  Day25.hs
src/main/kotlin/: Day14.kt  Day25.kt  Day8.kt
src/main/kotlin/2015/: Day1.kt
src/main/kotlin/2016/: Day19.kt  Day24.kt
src/main/kotlin/2017/: Day5.kt
src/main/kotlin/y2015/: Day3.kt  Day4.kt  Day5.kt  Day6.kt
src/main/kotlin/y2016/: Day18.kt  Day3.kt
src/main/kotlin/y2016/tmp/: Day1.kt  Day13.kt  Day14.kt  Day16.kt  Day17.kt  Day2.kt  Day4.kt  Day9.kt
