name:                advent-code
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              karl
maintainer:          karlstephanr@gmail.com
copyright:           2017 karl
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , containers
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , digits
                     , hashable
                     , lens
                     , megaparsec
                     , split
                     , text
                     , unordered-containers
                     , vector
                     , wreq
