name:                advent-code
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              karl
maintainer:          karlstephanr@gmail.com
copyright:           2017 karl
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array == 0.5.1.1,
                       base == 4.9.1.0,
                       base16-bytestring == 0.1.1.6,
                       base64-bytestring == 1.0.0.1,
                       bytestring == 0.10.8.1,
                       containers == 0.5.7.1,
                       diagrams == 1.4,
                       diagrams-lib == 1.4.1.2,
                       diagrams-svg == 1.4.1.1,
                       digits == 0.3.1,
                       hashable == 1.2.6.1,
                       lens == 4.15.4,
                       megaparsec == 5.3.1,
                       split == 0.2.3.2,
                       text == 1.2.2.2,
                       unordered-containers == 0.2.8.0,
                       vector == 0.12.0.1,
                       wreq == 0.5.0.1