name:                advent-code
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              karl
maintainer:          karlstephanr@gmail.com
copyright:           2017 karl
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array == 0.5,
                       base == 4.9,
                       base16-bytestring == 0.1,
                       base64-bytestring == 1.0,
                       bytestring == 0.10,
                       containers == 0.5,
                       diagrams == 1.4,
                       diagrams-lib == 1.4,
                       diagrams-svg == 1.4,
                       digits == 0.3,
                       hashable == 1.2,
                       lens == 4.15,
                       megaparsec == 5.3,
                       split == 0.2,
                       primes == 0.2,
                       text == 1.2,
                       unordered-containers == 0.2,
                       vector == 0.12,
                       wreq == 0.5